# MoDoT

./: +=⊙⊞●¬¬⊣.txt  .gitignore  2048.md  ALKAHEST.md  ALKAHEST.md:Zone.Identifier  BIGGIE.txt  IMASM_DYNAMICS.md  IMASM_QUICKREF.md  IMSCRIBERS_GUIDE_TO_IMASM.md  MODOT_PROMPTS.md  README.md  SIDON_f.txt  UFCm.md  _constants.py  ask  boob.butt  boob.txt  c9.txt  chrysopoeia_2048_blinded.tex  commit.txt  constants.txt  constants_run_distilled.md  continue.txt  ct.txt  dapce.md  deep_jump_math.py  expand.txt  fart.txt  findings.txt  forge_ooo_math.py  grok.md  hilb.txt  imasm_composer.html  iutd12.json  iutt.md  iutt3.md  iutt_clink_translation.md  jamm.txt  jammm.txt  k3v_modot.html  (+38 more)
_builds/ALKAHEST/: ALKAHEST.tex  _body.md  _body.tex
_builds/verification_as_imscription/: _body.md  _body.tex  verification_as_imscription.tex
ask_native/: +●¬⊣  Cargo.toml  README.md  build.rs
ask_native/.cargo/: config.toml
ask_native/src/: arev.rs  calc.rs  click.rs  dialect.rs  fart.rs  imasm.rs  imasm16_3.rs  learn.rs  local.rs  main.rs  ob3ect.rs  prover.rs  windings.rs
corpus/: corpus_2k.jsonl  gen_imasm_corpus.py  imasm_corpus.jsonl  imasm_rotations.jsonl  scale_corpus.py  smoke.jsonl
crystal_fs/: broadcast_log.jsonl  records.jsonl  tool_calls.jsonl
experiments/: bifurcation.py  bifurcation_experiments.py  exp_core.py  exp_corrected.py  exp_main.py  exp_q1.py  exp_q2.py  exp_q3.py  exp_q4.py  exp_q5.py  exp_tier.py  experiments_all.py  experiments_v2.py  experiments_v2_main.py  final_experiment.py  header.txt  kernel_port.py  results.json  results_final.json  results_v2.json  run_all_experiments.py  run_exp2.py  run_experiments.py
figures/: fig_crystalline_trilattice.py  fig_hopfionic_execution.py  fig_rotat_unmoved_mover.py
imasm_core/: Cargo.toml
imasm_core/src/: check.rs  classic.rs  imasm16_3.rs  lib.rs
lean/: ErdosProblems.lean  SemanticBranchVerifier.lean
md/: CLICK_MATHS_SPEC.md  HOW_TO_OPERATE_THE_MAGICAL_SQUARES.md  MODOT_PROMPTS.md  baryon.md  chaos_first_measurements.md  constants_run_distilled.md  cuboid_runs_extract_2026-07-19.md  dapce.md  hodge.md  imasm_composition_rules.md  iutt_clink_translation.md  moat_reseed_run_extract.md  primitive_imasm_cycle.md  stone_frontier_run_distilled.md  z.md  z.txt
modot/: __init__.py  agent.py  divisor_ring.py  evaluator_geometry.py  ig_tools.py  jump_tools.py  natures.py  prover.py  router.py  selectivity.py  spine.py  torus.py  vessel.py  witness_proof.py
modot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ob3ects/: imasm_catalog_words.json  imasm_knowledge.json  imasm_manifest.json  imasm_tools.json  imasm_tools_hollow.json
ob3ects/janus_gate/: the_dialetheic_object_as_janus_gate_the_belnap_v_ob3ect.json  the_dialetheic_object_as_janus_gate_the_belnap_v_scaffold.lean
ob3ects/lean_prover_loop/: the_closed_loop_lean_prover_an_agent_that_writes_ob3ect.json  the_closed_loop_lean_prover_an_agent_that_writes_scaffold.lean
ob3ects/primitives/: the_primitive_type_called_ado_ob3ect.json  the_primitive_type_called_age_ob3ect.json  the_primitive_type_called_ah_ob3ect.json  the_primitive_type_called_air_ob3ect.json  the_primitive_type_called_are_ob3ect.json  the_primitive_type_called_array_ob3ect.json  the_primitive_type_called_ash_ob3ect.json  the_primitive_type_called_awe_ob3ect.json  the_primitive_type_called_bib_ob3ect.json  the_primitive_type_called_church_ob3ect.json  the_primitive_type_called_dead_ob3ect.json  the_primitive_type_called_ear_ob3ect.json  the_primitive_type_called_eat_ob3ect.json  the_primitive_type_called_egg_ob3ect.json  the_primitive_type_called_err_ob3ect.json  the_primitive_type_called_fee_ob3ect.json  the_primitive_type_called_gag_ob3ect.json  the_primitive_type_called_ha_ha_ob3ect.json  the_primitive_type_called_hung_ob3ect.json  the_primitive_type_called_ian_ob3ect.json  the_primitive_type_called_ice_ob3ect.json  the_primitive_type_called_if_ob3ect.json  the_primitive_type_called_judge_ob3ect.json  the_primitive_type_called_kick_ob3ect.json  the_primitive_type_called_loll_ob3ect.json  the_primitive_type_called_measure_ob3ect.json  the_primitive_type_called_mime_ob3ect.json  the_primitive_type_called_monad_ob3ect.json  the_primitive_type_called_nun_ob3ect.json  the_primitive_type_called_oak_ob3ect.json  the_primitive_type_called_oil_ob3ect.json  the_primitive_type_called_on_ob3ect.json  the_primitive_type_called_ooze_ob3ect.json  the_primitive_type_called_or_ob3ect.json  the_primitive_type_called_out_ob3ect.json  the_primitive_type_called_peep_ob3ect.json  the_primitive_type_called_roar_ob3ect.json  (+12 more)
questions/: 107_1135_713.txt  HERE.txt  QPRIME.txt  baryon_asymmetry_bridge.md  clink_l9_lean_repair.md  clock_walk.txt  erdos_open_problems.md  moat_protocol_reseed.txt  moat_reseed_second_winding.txt  omega_saturation.txt  p712.txt  parity_frontier_reseed.txt  phase_twin_probes.txt  probz.md  probz.txt  probz22.txt  q0.txt  q1.txt  q10.txt  q100.txt  q1002.txt  q1003.txt  q1004.txt  q1005.txt  q101.txt  q1011.txt  q1013.txt  q1016.txt  q1017.txt  q102.txt  q1029.txt  q103.txt  q1030.txt  q1032.txt  q1033.txt  q1035.txt  q1038.txt  q1039.txt  q104.txt  q1040.txt  (+611 more)
questions/other/: probz.md  (+4 more)
structoforge/: README.md  __init__.py  cli.py  demo.py  discovery.py  explorer.py  iuft.py  landscape_explorer.py  materials_workbench.py  paranumber.py  proof_forge.py  resonance_engine.py  winding_predictor.py
txt/: c9.txt  c99.txt  formalize.txt  look.txt  prime_composition_index.txt  primes.txt  r.txt  sic2048.txt
universals/: UNIVERSAL_CONSTANTS_FORMALIZED.md  backtranslate.txt  kernel_3d_visualizer_3.html
(+13 files in other folders)
