[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modot"
version = "0.1.0"
description = "mOMonadOS Agent Framework — agentic LLM running within the Frobenius Kernel"
readme = "README.md"
license = {text = "Unlicense"}
authors = [{name = "Lando⊗⊙perator"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
modot = "modot.agent:main"

[project.urls]
Repository = "https://github.com/landon/momod"

[tool.setuptools]
packages = ["modot"]
