[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modot"
version = "0.1.0"
description = "MoDoT — Mathematical Orthogonalization & Dialetheic Ontological Theorem Prover. Types mathematical goals into the 12-primitive Imscribing Grammar, dispatches via Belnap FOUR to kernel prover or Witness arm, and verifies in Lean 4."
readme = "README.md"
license = {text = "Unlicense"}
authors = [{name = "Lando⊗⊙perator"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
modot = "modot.agent:main"

[project.urls]
Repository = "https://github.com/umpolungfish/MoDoT"

[tool.setuptools]
packages = ["modot"]
