[package]
name = "momonad-ask"
version = "0.1.0"
edition = "2021"
description = "Host-native MoDoT-parity ask: full-length questions, file paths, Gemini-class answers, ManuscriptSpine — no Python"
license = "MIT"

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
regex = "1"
dirs = "5"
